@@ -1,5 +1,6 @@
 cmake (2.8.1-4) UNRELEASED; urgency=low
 
+  * Further improve FinJNI.cmake. This should fix some inconsistencies on s390.
 
  -- Modestas Vainius <modax@debian.org>  Sun, 16 May 2010 16:14:33 +0300
 
